Updated docker config